scribble-assertions/src/test/resources/good/extensions/assertions/RecWithAssertions.scr
module good.extensions.assertions.RecWithAssertions;


type <java> "java.lang.Integer" from "rt.jar" as Int;



global protocol Proto1(role A, role B)
{
rec Loop {
	choice at A {
	//[x<10]
	MSG1(x:Int) from A to B;  @(x < 10);
	
	} or {
	//[y>10]
	MSG2(y:Int) from A to B;  @(y > 10);
	continue Loop; 
	}
}
}