scribble-assertions/src/test/resources/bad/extensions/assertions/RecWithAssertions.scr
module bad.extensions.assertions.RecWithAssertions;


type <java> "java.lang.Int" from "rt.jar" as Int;


global protocol Prot(role A, role B, role C)
{
rec Loop {
	choice at A {
	
	//[x<10]
	MSG1(x:Int) from A to B;  @(x < 10);
	
	} or {
	//[y>10]
	MSG2(y:Int) from A to B;  @(y > 10);
	continue Loop; 
	}
}
	//[z<y]
	MSG3(z:Int) from B to C;  @(z < y);
}
